--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/game-section.css">
+    <link rel="stylesheet" href="./styles/benefits.css">
     <title>Easy Gaming</title>
 </head>
 <body>
@@ -31,7 +33,7 @@
                 </div>
                 <div class="icons-logos">
                     <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="none"><path fill="#EF1313" d="M21.609 6.80674 5.64199 4.88769 4.66866.88209C4.63483.747744 4.56144.629114 4.45972.544311 4.35799.459507 4.23351.413189 4.10527.412428h-2.3969C1.62174.285769 1.50928.182621 1.37981.111067 1.25033.0395134 1.10736.00149791.962095 0 .706932 0 .462219.110093.281791.306061.101363.502028 0 .767817 0 1.04496c0 .27714.101363.54293.281791.73889.180428.19597.425141.30606.680304.30606.309975 0 .571905-.16833.747825-.41411h1.94666l4.05297 16.6654c-.44211.5112-.68868 1.1858-.6897 1.8871-.00031.364.06546.7245.19355 1.0609.12809.3364.31598.642.55292.8994.23695.2575.5183.4616.82795.6009.30966.1392.64156.2107.9767.2105.67713.0002 1.32663-.2916 1.80583-.8114.4791-.5197.7485-1.2248.7492-1.9603-.0014-.2108-.0256-.4207-.0721-.6254h4.2878c-.0459.2048-.0698.4147-.0713.6254 0 1.5319 1.1438 2.7717 2.5542 2.7717 1.4104 0 2.5519-1.2398 2.5519-2.7717.0002-.7356-.2686-1.4412-.7473-1.9616-.4787-.5204-1.1281-.813-1.8054-.8134-.7362 0-1.3949.3451-1.8614.8863h-5.53c-.2373-.2791-.5252-.5018-.8455-.6543-.3203-.1525-.66619-.2315-1.01593-.232-.29448 0-.57191.0656-.83462.1649l-.14104-.5774H19.8963c.4343-.0096.8531-.1775 1.189-.4767.3359-.2992.5694-.7123.6632-1.173l1.2205-6.56346c.0206-.11481.031-.2315.031-.34846.0006-.41664-.1415-.81864-.3985-1.12788-.2571-.30924-.6109-.50279-.9925-.54456ZM18.8254 20.4758c-.0607-.0002-.1189-.0264-.162-.0729-.0431-.0465-.0676-.1095-.0682-.1754.0023-.1397.1046-.2508.2309-.2508.1264 0 .2287.1111.2302.2499-.0008.0658-.0254.1286-.0684.1749-.0431.0463-.1012.0724-.1618.0726l-.0007.0017Zm1.3794-6.3085.7346-.7996-.2464 1.3299-.4882-.5303ZM9.00448 6.56097l.80207.87367-.99968 1.08578-1.00201-1.08578.84237-.91576.35725.04209Zm3.48572.41916.4169.45451-.9997 1.08578-1.002-1.08578.5332-.58076 1.0516.12625ZM6.58278 8.76114l.6742-.73058.99968 1.08746-.99968 1.08578-.43785-.47387-.23558-.96963-.00077.00084Zm-.22861-.94269-.25419-1.04369.60834.66072-.35415.38297Zm9.65193 2.98295-.9997 1.0858-1.002-1.0858 1.0013-1.08831 1.0004 1.08831Zm-.4518-1.68338 1.0013-1.08746.9996 1.08746-.9996 1.08748-1.0013-1.08748Zm-2.0978 1.08578-1.002-1.08578 1.0013-1.0883.9996 1.08746-.9989 1.08662Zm-.5502.5976-.9996 1.0858-1.0013-1.0858 1.0013-1.08831.9996 1.08831Zm-2.5495-.5976L9.35476 9.11802l1.00124-1.0883.9997 1.08746-.9989 1.08662Zm-.55025.5976-.99968 1.0858-1.00201-1.0858 1.00123-1.08831 1.00046 1.08831Zm-2.54957.5951.99968 1.0874-.60756.6591-.41847-1.7204.02557-.0278.00078.0017Zm.6215 2.6909.92761-1.0075.99968 1.0874-.99968 1.0858-.87568-.9511-.05193-.2146Zm1.47705-1.6035.99967-1.0883 1.002 1.0875-.9997 1.0858-1.00119-1.0858-.00078.0008Zm2.55117.5951 1.0012 1.0875-1.0012 1.0858-1.0013-1.0858 1.0013-1.0875Zm.5486-.5959 1.0012-1.0883.9997 1.0875-.9997 1.0857-1.0012-1.0849Zm2.5496.5951 1.002 1.0874-.9997 1.0858-1.0012-1.0875.9989-1.0857Zm.5502-.5959.9997-1.0884 1.002 1.0875-.9997 1.0858-1.002-1.0849Zm1.5499-1.6834.9997-1.08833 1.002 1.08743-.9997 1.0858-1.002-1.0849Zm1.5499-1.68341.9997-1.0883 1.0012 1.09083-.9997 1.08748-1.002-1.08832.0008-.00169Zm-.5502-.59591-.8951-.97299 1.6134.19358-.7183.77941Zm-2.097-1.08494L15.008 8.5221l-1.002-1.08746.2247-.24409 1.746.21042.031.03367Zm-5.6494-.5976-.1178-.12625.2116.02525-.093.101h-.0008Zm-3.09977.00169-.50372-.5471.90669.10942-.40297.43768Zm3.09977 7.92447.9338 1.0143H9.4245l.9338-1.0143Zm3.0998 0 .9338 1.0151h-1.8692l.9354-1.0151Zm3.0998 0 .9353 1.0159h-1.8707l.9354-1.0159Zm.5479-.5959 1.0012-1.0883.9997 1.0875-.9997 1.0858-1.0012-1.085Zm1.5499-1.6834 1.0012-1.0874.9997 1.0858-.9997 1.0883-1.002-1.0858.0008-.0009Zm2.5511-.5976-1.0013-1.0857.9997-1.08751.3449.37371-.3333 1.7878-.0108.0126.0008-.0009Zm.3874-3.78757-.3874.42085-.5115-.55299.7881.09427c.0419.00673.0775.02188.1116.03703l-.0008.00084ZM9.57252 20.4749c-.05864-.0037-.11375-.0316-.15405-.078-.04031-.0464-.06276-.1077-.06276-.1715 0-.0638.02245-.1252.06276-.1716.0403-.0464.09541-.0743.15405-.078.05843.0037.11335.0315.15351.0778.04017.0462.06254.1074.06254.1709 0 .0636-.02237.1248-.06254.171-.04016.0462-.09508.0741-.15351.0777v.0017Zm10.32458-4.6966h-1.1756l.9354-1.0159.7207.7828c-.1449.143-.3278.244-.4805.2331Z"/></svg></a>
-                    <a href="/registro.html"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="22" fill="none"><path fill="#EF1313" d="M12.8924 13.1971c.2769.0002.551.0643.8068.1888.2558.1245.4882.3069.6839.5368.1957.2298.3509.5027.4568.8029.1058.3003.1602.6221.1601.947v1.01c0 .6305-.1678 1.2451-.48 1.7582C13.0705 20.8217 10.7041 22 7.49766 22c-3.20833 0-5.57379-1.1794-7.019505-3.5603C.167004 17.927-.00014143 17.3132 9e-8 16.6837v-1.0122c0-.6562.22215191-1.2856.61758591-1.7496.395434-.4641.931754-.7248 1.490984-.7248H12.8924ZM7.49672 0c.61561-1e-8 1.22519.14229 1.79394.418746.56875.276456 1.08554.681664 1.52084 1.192484.4353.51083.7806 1.11727 1.0162 1.78469.2356.66742.3568 1.38277.3568 2.10518 0 .72242-.1212 1.43776-.3568 2.10518-.2356.66743-.5809 1.27386-1.0162 1.78469-.4353.51082-.95209.91603-1.52084 1.19253-.56875.2764-1.17833.4187-1.79394.4187-1.24328 0-2.43564-.5796-3.31477-1.61123-.87913-1.03166-1.37302-2.43089-1.37302-3.88987s.49389-2.85821 1.37302-3.88986C5.06108.579579 6.25344 0 7.49672 0Z"/></svg></a>
+                    <a href="/login.html"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="22" fill="none"><path fill="#EF1313" d="M12.8924 13.1971c.2769.0002.551.0643.8068.1888.2558.1245.4882.3069.6839.5368.1957.2298.3509.5027.4568.8029.1058.3003.1602.6221.1601.947v1.01c0 .6305-.1678 1.2451-.48 1.7582C13.0705 20.8217 10.7041 22 7.49766 22c-3.20833 0-5.57379-1.1794-7.019505-3.5603C.167004 17.927-.00014143 17.3132 9e-8 16.6837v-1.0122c0-.6562.22215191-1.2856.61758591-1.7496.395434-.4641.931754-.7248 1.490984-.7248H12.8924ZM7.49672 0c.61561-1e-8 1.22519.14229 1.79394.418746.56875.276456 1.08554.681664 1.52084 1.192484.4353.51083.7806 1.11727 1.0162 1.78469.2356.66742.3568 1.38277.3568 2.10518 0 .72242-.1212 1.43776-.3568 2.10518-.2356.66743-.5809 1.27386-1.0162 1.78469-.4353.51082-.95209.91603-1.52084 1.19253-.56875.2764-1.17833.4187-1.79394.4187-1.24328 0-2.43564-.5796-3.31477-1.61123-.87913-1.03166-1.37302-2.43089-1.37302-3.88987s.49389-2.85821 1.37302-3.88986C5.06108.579579 6.25344 0 7.49672 0Z"/></svg></a>
                 </div>
             </div>
             
@@ -81,6 +83,132 @@
         <section class="game-section">
             <div class="game-title-container">
                 <h1>Tendencias</h1>
+            </div>
+            <div class="games-container">
+                <div>
+                    <a href="#">
+                        <picture>
+                            <img src="./public/imgs/games/buckshot-roulette-pc-juego-steam-cover.jpg" alt="buckshot-roulette">
+                            <div class="discount">-24%</div>
+                        </picture>
+                    </a>
+                    <div class="game-info">
+                        <p>Buckshot Roulette</p>
+                        <p>$2.68</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <picture>
+                            <img src="./public/imgs/games/destiny-2-la-forma-final-pase-anual-dlc-season-pc-juego-steam-cover.jpg" alt="buckshot-roulette">
+                            <div class="discount">-24%</div>
+                        </picture>
+                    </a>
+                    <div class="game-info">
+                        <p>Destiny 2: La Forma Final + Pase anual</p>
+                        <p>$79.13</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <picture>
+                            <img src="./public/imgs/games/dying-light-2-stay-human-reloaded-edition-reloaded-edition-pc-juego-steam-cover.jpg" alt="buckshot-roulette">
+                            <div class="discount">-24%</div>
+                        </picture>
+                    </a>
+                    <div class="game-info">
+                        <p>Dying Light 2 Stay Human Reloaded Edition</p>
+                        <p>$21.52</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <picture>
+                            <img src="./public/imgs/games/farming-simulator-22-farm-production-pack-pc-juego-steam-cover.jpg" alt="buckshot-roulette">
+                            <div class="discount">-24%</div>
+                        </picture>
+                    </a>
+                    <div class="game-info">
+                        <p>Farming Simulator 22</p>
+                        <p>$6.45</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <picture>
+                            <img src="./public/imgs/games/ghost-of-tsushima-director-s-cut-pc-juego-steam-cover.jpg" alt="buckshot-roulette">
+                            <div class="discount">-24%</div>
+                        </picture>
+                    </a>
+                    <div class="game-info">
+                        <p>Ghost of Tsushima: Director's Cut</p>
+                        <p>$49.52</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <picture>
+                            <img src="./public/imgs/games/the-elder-scrolls-online-deluxe-upgrade-gold-road-deluxe-upgrade-pc-juego-steam-cover.jpg" alt="buckshot-roulette">
+                            <div class="discount">-24%</div>
+                        </picture>
+                    </a>
+                    <div class="game-info">
+                        <p>The Elder Scrolls Online Deluxe</p>
+                        <p>$40.58</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SECTION #2 -->
+        <section class="benefits">
+            <div class="benefits-wrap">
+                <div class="benefits-container">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="red"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-mail-fast"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7h3" /><path d="M3 11h2" /><path d="M9.02 8.801l-.6 6a2 2 0 0 0 1.99 2.199h7.98a2 2 0 0 0 1.99 -1.801l.6 -6a2 2 0 0 0 -1.99 -2.199h-7.98a2 2 0 0 0 -1.99 1.801z" /><path d="M9.8 7.5l2.982 3.28a3 3 0 0 0 4.238 .202l3.28 -2.982" /></svg>
+                    <div class="benefits-text">
+                        <p class="benefit-primary">No esperes más</p>
+                        <p class="benefit-secondary">Obtenga instantáneamente su juego digital.</p>
+                    </div>
+                </div>
+                <hr class="benefits-separator">
+
+                <div class="benefits-container">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="red"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-scan-eye"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8v-2a2 2 0 0 1 2 -2h2" /><path d="M4 16v2a2 2 0 0 0 2 2h2" /><path d="M16 4h2a2 2 0 0 1 2 2v2" /><path d="M16 20h2a2 2 0 0 0 2 -2v-2" /><path d="M7 12c3.333 -4.667 6.667 -4.667 10 0" /><path d="M7 12c3.333 4.667 6.667 4.667 10 0" /><path d="M12 12h-.01" /></svg>
+                    <div class="benefits-text">
+                        <p class="benefit-primary">Protección segura</p>
+                        <p class="benefit-secondary">Catálogo de más de 1.000 juegos.</p>
+                    </div>
+                </div>
+                <hr class="benefits-separator">
+                
+                <div class="benefits-container">
+                    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="red"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-hipchat"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17.802 17.292s.077 -.055 .2 -.149c1.843 -1.425 3 -3.49 3 -5.789c0 -4.286 -4.03 -7.764 -9 -7.764c-4.97 0 -9 3.478 -9 7.764c0 4.288 4.03 7.646 9 7.646c.424 0 1.12 -.028 2.088 -.084c1.262 .82 3.104 1.493 4.716 1.493c.499 0 .734 -.41 .414 -.828c-.486 -.596 -1.156 -1.551 -1.416 -2.29z" /><path d="M7.5 13.5c2.5 2.5 6.5 2.5 9 0" /></svg>
+                    <div class="benefits-text">
+                        <p class="benefit-primary">Atención al cliente</p>
+                        <p class="benefit-secondary">Respondemos tu consulta en menos de 24 horas.</p>
+                    </div>
+                </div>
+                <hr class="benefits-separator">
+
+                <div class="stars-container">
+                    <div class="stars">
+                        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="red"  stroke="red"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
+                        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="red"  stroke="red"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
+                        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="red"  stroke="red"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
+                        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="red"  stroke="red"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
+                        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="red"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
+                    </div>
+                    <div class="benefits-text">
+                        <span>Google <strong>4.5</strong> | <strong>12.200</strong> opiniones</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SECTION #3 -->
+        <section class="game-section">
+            <div class="game-title-container">
+                <h1>Más vendidos</h1>
             </div>
             <div class="games-container">
                 <div>
