desktop large responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/game-section.css">
     <link rel="stylesheet" href="./styles/benefits.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Easy Gaming</title>
 </head>
 <body>
@@ -40,15 +43,7 @@
             
         </div>
         <div class="nav-category-container">
-            <nav>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#F8F8F8" d="M14.1667 3.33334c.9216 0 1.6291.7025 2.1533 1.45834l.1775.2675.1625.26666c.0517.08667.1008.17334.1483.25667.6559 1.1725 1.2267 2.70333 1.6042 4.21583.375 1.50086.5825 3.06836.45 4.30086-.1333 1.2375-.7708 2.5675-2.1958 2.5675-1.2784 0-2.2859-.6834-3.1042-1.3509l-.925-.7758c-.7692-.63-1.6108-1.2067-2.6375-1.2067-1.02666 0-1.86916.5767-2.63666 1.2067l-.92501.775c-.82.6683-1.82749 1.3517-3.105 1.3517-1.42583 0-2.06333-1.33-2.19583-2.5675-.13167-1.2334.075-2.8.45-4.30086.3775-1.5125.94833-3.04333 1.60417-4.21583l.14833-.2575.1625-.26583.1775-.2675c.52417-.75584 1.23167-1.45834 2.15333-1.45834.42501 0 .84751.10334 1.26251.225l.49416.15167c.08167.025.1625.04917.24333.07167.72084.20666 1.45834.385 2.16667.385.7083 0 1.4458-.17834 2.1667-.385l.7375-.2225c.415-.1225.8375-.22584 1.2625-.22584ZM7.08334 6.66668c-.55254 0-1.08244.21949-1.47314.61019C5.2195 7.66757 5 8.19748 5 8.75001c0 .55253.2195 1.08244.6102 1.47309.3907.3908.9206.6102 1.47314.6102.55253 0 1.08243-.2194 1.47313-.6102.39071-.39065.6102-.92056.6102-1.47309s-.21949-1.08244-.6102-1.47314c-.3907-.3907-.9206-.61019-1.47313-.61019Zm5.83336 0c-.221 0-.433.08779-.5893.24407-.1563.15628-.2441.36825-.2441.58926v.41667h-.4166c-.221 0-.433.08779-.5893.24407-.1563.15628-.2441.36825-.2441.58926 0 .22101.0878.43298.2441.58926.1563.15628.3683.24407.5893.24407h.4166V10c0 .221.0878.433.2441.5893.1563.1562.3683.244.5893.244.221 0 .4329-.0878.5892-.244.1563-.1563.2441-.3683.2441-.5893v-.41666h.4167c.221 0 .4329-.08779.5892-.24407.1563-.15628.2441-.36825.2441-.58926 0-.22101-.0878-.43298-.2441-.58926-.1563-.15628-.3682-.24407-.5892-.24407H13.75v-.41667c0-.22101-.0878-.43298-.2441-.58926-.1563-.15628-.3682-.24407-.5892-.24407ZM7.08334 8.33334c.1105 0 .21648.0439.29462.12204.07814.07814.12204.18412.12204.29463s-.0439.21649-.12204.29463c-.07814.07814-.18412.12204-.29462.12204-.11051 0-.21649-.0439-.29463-.12204-.07814-.07814-.12204-.18412-.12204-.29463s.0439-.21649.12204-.29463c.07814-.07814.18412-.12204.29463-.12204Z"/></svg>
-                    <p>Categorías</p>
-                </a>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#F8F8F8" d="m17.6153 10.3233.92-1.58999c.1106-.1913.1407-.41868.0836-.63214-.057-.21347-.1965-.39554-.3877-.50619l-1.5917-.92V4.84164c0-.22101-.0878-.43297-.2441-.58925-.1563-.15628-.3682-.24408-.5892-.24408h-1.8325l-.9192-1.59083c-.111-.19091-.2927-.33042-.5058-.38834-.1057-.02865-.2161-.03604-.3246-.02173-.1086.0143-.2133.05002-.3079.10507l-1.5917.92-1.59167-.92084c-.1914-.1105-.41886-.14044-.63234-.08325-.21347.0572-.39549.19686-.506.38825l-.92 1.59167h-1.8325c-.22101 0-.43297.0878-.58925.24408-.15628.15628-.24408.36824-.24408.58925v1.8325l-1.59167.92c-.09497.05463-.17821.12749-.24494.21439-.06673.0869-.11564.18613-.1439.29198-.02826.10586-.03533.21625-.0208.32485.01453.1086.05037.21325.10548.30795l.92 1.58999-.92 1.59c-.11001.1915-.13986.4187-.08304.6321.05682.2134.19571.3957.38637.5071l1.59167.92v1.8325c0 .221.08779.433.24407.5892.15628.1563.36825.2441.58926.2441h1.83333l.92 1.5917c.07378.1261.17912.2308.30565.3039.12654.073.26991.1119.41602.1127.145 0 .28916-.0383.4175-.1125l1.59004-.92 1.5916.92c.1914.1104.4187.1403.6321.0833.2134-.057.3955-.1963.5063-.3874l.9191-1.5917h1.8325c.221 0 .433-.0878.5893-.2441.1563-.1562.2441-.3682.2441-.5892v-1.8325l1.5916-.92c.0948-.0548.1779-.1277.2445-.2147.0666-.0869.1155-.1861.1437-.2919.0282-.1058.0354-.2161.021-.3246-.0145-.1086-.0501-.2132-.105-.308l-.9192-1.59ZM8.24032 6.14831c.33164.00011.64964.13196.88406.36653.23442.23458.36606.55267.36594.8843-.00011.33164-.13195.64964-.36653.88406-.23457.23442-.55267.36605-.8843.36594-.33163-.00011-.64963-.13195-.88405-.36653-.23442-.23458-.36606-.55267-.36595-.8843.00011-.33163.13196-.64963.36653-.88405.23458-.23443.55267-.36606.8843-.36595Zm.25 7.99999-1.33333-.9992L12.157 6.48248l1.3333.99916-4.99998 6.66666Zm3.91668.3333c-.1642 0-.3268-.0324-.4785-.0953s-.2895-.155-.4056-.2712c-.116-.1161-.2081-.254-.2709-.4057-.0628-.1518-.0951-.3144-.095-.4786 0-.1642.0324-.3268.0953-.4785s.1551-.2895.2712-.4055c.1162-.1161.2541-.2082.4058-.271.1517-.0628.3143-.095.4785-.095.3317.0001.6497.132.8841.3665.2344.2346.366.5527.3659.8843-.0001.3317-.1319.6497-.3665.8841-.2346.2344-.5527.3661-.8843.3659Z"/></svg>
-                    <p>Ofertas</p>
-                </a>
+            <nav class="nav-container-categories">
                 <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#F8F8F8" d="M19.9964 0h-6.5636l-.3271.355034V14.4206l.2357 1.8446h-.2585v.1883h-.2193v-.2362h-.4356v.1884h-.2229v-.2833h-.3464v.2362h-.7899l-1.44269-.2833v-.71h.61209l.2157-1.1346h1.9476c.0644 0 .1262-.0277.1717-.0769.0456-.0492.0712-.1159.0712-.1855V3.61826c.0001-.03442-.0062-.06851-.0184-.10031-.0121-.0318-.0301-.06067-.0526-.08493-.0226-.02427-.0494-.04345-.0789-.05643-.0295-.01298-.0611-.01951-.093-.0192H.241403c-.063966.0002-.125259.02775-.1704897.07663C.0256823 3.4829.00018841 3.54914 0 3.61826V13.9698c0 .1444.10856.2624.242831.2624H2.39617l.14284 1.1346h1.00561L1.11631 17.991l-.503519 1.1577S2.71257 20 5.38228 20c2.669 0 6.91352-.6614 7.48202-.6614h3.4568v-.9463l-.0978-.8235h1.2455c-.1428.0818-.2285.1883-.2285.3056v.7549c0 .2624.4307.4731.9642.4731.5306 0 .9642-.2084.9642-.4724v-.7563c0-.2609-.4321-.4709-.9642-.4709-.1336 0-.2593.0155-.3743.0386v-.1312h-1.6355l-.0393-.3342H20L19.9964 0ZM.874906 13.144V4.30209H11.638V13.144H.874906Z"/></svg>
                     <p>Pc</p>
@@ -61,6 +56,10 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><g clip-path="url(#a)"><path fill="#F8F8F8" d="M10 7.69583c2.4225 2.45497 4.13 5.33337 5.5567 8.51417-1.5264 1.3698-3.5058 2.1262-5.5567 2.1233-2.0509.0029-4.03027-.7535-5.55667-2.1233C5.87 13.0292 7.57667 10.1508 10 7.69583Zm-5.40917-4.035C6.0907 4.46866 7.4972 5.43893 8.785 6.55417c-2.405 2.445-4.13333 5.26163-5.55583 8.30503C2.21056 13.4439 1.66383 11.7437 1.66667 10c-.00123-1.20544.25966-2.39673.76458-3.49133.50493-1.0946 1.24181-2.06632 2.15958-2.84784Zm10.81837 0c.9177.78152 1.6546 1.75324 2.1595 2.84784.505 1.0946.7659 2.28589.7646 3.49133 0 1.8133-.5791 3.4917-1.5625 4.8583C15.3483 11.8158 13.62 9 11.215 6.55417c1.2878-1.11522 2.6943-2.08549 4.1942-2.89334ZM10 1.66667c1.3958 0 2.7117.34333 3.8675.95C12.4911 3.41768 11.1958 4.35068 10 5.4025 8.8042 4.35069 7.50894 3.41769 6.1325 2.61667c1.19293-.62594 2.52033-.95199 3.8675-.95Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h20v20H0z"/></clipPath></defs></svg>
                     <p>Xbox</p>
                 </a>
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path fill="#F8F8F8" d="m17.6153 10.3233.92-1.58999c.1106-.1913.1407-.41868.0836-.63214-.057-.21347-.1965-.39554-.3877-.50619l-1.5917-.92V4.84164c0-.22101-.0878-.43297-.2441-.58925-.1563-.15628-.3682-.24408-.5892-.24408h-1.8325l-.9192-1.59083c-.111-.19091-.2927-.33042-.5058-.38834-.1057-.02865-.2161-.03604-.3246-.02173-.1086.0143-.2133.05002-.3079.10507l-1.5917.92-1.59167-.92084c-.1914-.1105-.41886-.14044-.63234-.08325-.21347.0572-.39549.19686-.506.38825l-.92 1.59167h-1.8325c-.22101 0-.43297.0878-.58925.24408-.15628.15628-.24408.36824-.24408.58925v1.8325l-1.59167.92c-.09497.05463-.17821.12749-.24494.21439-.06673.0869-.11564.18613-.1439.29198-.02826.10586-.03533.21625-.0208.32485.01453.1086.05037.21325.10548.30795l.92 1.58999-.92 1.59c-.11001.1915-.13986.4187-.08304.6321.05682.2134.19571.3957.38637.5071l1.59167.92v1.8325c0 .221.08779.433.24407.5892.15628.1563.36825.2441.58926.2441h1.83333l.92 1.5917c.07378.1261.17912.2308.30565.3039.12654.073.26991.1119.41602.1127.145 0 .28916-.0383.4175-.1125l1.59004-.92 1.5916.92c.1914.1104.4187.1403.6321.0833.2134-.057.3955-.1963.5063-.3874l.9191-1.5917h1.8325c.221 0 .433-.0878.5893-.2441.1563-.1562.2441-.3682.2441-.5892v-1.8325l1.5916-.92c.0948-.0548.1779-.1277.2445-.2147.0666-.0869.1155-.1861.1437-.2919.0282-.1058.0354-.2161.021-.3246-.0145-.1086-.0501-.2132-.105-.308l-.9192-1.59ZM8.24032 6.14831c.33164.00011.64964.13196.88406.36653.23442.23458.36606.55267.36594.8843-.00011.33164-.13195.64964-.36653.88406-.23457.23442-.55267.36605-.8843.36594-.33163-.00011-.64963-.13195-.88405-.36653-.23442-.23458-.36606-.55267-.36595-.8843.00011-.33163.13196-.64963.36653-.88405.23458-.23443.55267-.36606.8843-.36595Zm.25 7.99999-1.33333-.9992L12.157 6.48248l1.3333.99916-4.99998 6.66666Zm3.91668.3333c-.1642 0-.3268-.0324-.4785-.0953s-.2895-.155-.4056-.2712c-.116-.1161-.2081-.254-.2709-.4057-.0628-.1518-.0951-.3144-.095-.4786 0-.1642.0324-.3268.0953-.4785s.1551-.2895.2712-.4055c.1162-.1161.2541-.2082.4058-.271.1517-.0628.3143-.095.4785-.095.3317.0001.6497.132.8841.3665.2344.2346.366.5527.3659.8843-.0001.3317-.1319.6497-.3665.8841-.2346.2344-.5527.3661-.8843.3659Z"/></svg>
+                    <p>Ofertas</p>
+                </a>
             </nav>
         </div>
     </header>
@@ -69,16 +68,49 @@
     <main>
         <!-- SECTION #1 -->
         <section>
-            <div class="img-container">
-                <img class="main-img" src="./public/imgs/main-img.jpg" alt="main-img">
-                <div class="main-text">
-                    <h1>Dragon's Dogma 2</h1>
-                    <div>
-                        <p>-50%</p>
-                        <span>$42.59</span>
+            <!-- SLIDER -->
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="3500">
+                    <img src="./public/imgs/ghost-of-tsushima.jpg" class="d-block w-100 wallpaper-carousel" alt="ghost-of-tsushima">
+                    <div class="main-text">
+                        <h1>Ghost of Tsushima</h1>
+                        <div>
+                            <p>-32%</p>
+                            <span>$47.26</span>
+                        </div>
                     </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3500">
+                    <img src="./public/imgs/dragon-dogma.jpg" class="d-block w-100 wallpaper-carousel" alt="dragon-dogma">
+                    <div class="main-text">
+                        <h1>Dragon's Dogma 2</h1>
+                        <div>
+                            <p>-50%</p>
+                            <span>$42.59</span>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="3500">
+                    <img src="./public/imgs/the-last-of-us.jpeg" class="d-block w-100 wallpaper-carousel" alt="the-last-of-us">
+                    <div class="main-text">
+                        <h1>The Last of Us Part 1</h1>
+                        <div>
+                            <p>-20%</p>
+                            <span>$40.99</span>
+                        </div>
+                    </div>
+                  </div>
                 </div>
-            </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </section>
         <!-- SECTION #2 -->
         <section class="game-section">
@@ -164,7 +196,7 @@
         <!-- SECTION #2 -->
         <section class="benefits">
             <div class="benefits-wrap">
-                <div class="benefits-container">
+                <div class="benefits-container primary-benefit" id="benefit-speed">
                     <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="red"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-mail-fast"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7h3" /><path d="M3 11h2" /><path d="M9.02 8.801l-.6 6a2 2 0 0 0 1.99 2.199h7.98a2 2 0 0 0 1.99 -1.801l.6 -6a2 2 0 0 0 -1.99 -2.199h-7.98a2 2 0 0 0 -1.99 1.801z" /><path d="M9.8 7.5l2.982 3.28a3 3 0 0 0 4.238 .202l3.28 -2.982" /></svg>
                     <div class="benefits-text">
                         <p class="benefit-primary">No esperes más</p>
@@ -287,6 +319,7 @@
             </div>
         </section>
 
+        <!-- FOOTER -->
         <footer>
             <div class="primary-footer">
                 <div class="logo-footer">
@@ -381,5 +414,8 @@
             </div>
         </footer>
     </main>
+
+    <!-- BOOTSTRAP -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
